@@ -53,8 +53,11 @@ apport (0.82) UNRELEASED; urgency=low
     not set a retracer tag 'need-all-retrace'.
   * test-apport: Clarify assertion failure message when an unexpected core
     dump is present.
+  * apport/report.py, get_module_license(): Do not iterate over Popen.stdout,
+    use communicate() instead. The latter is already fixed to not trip over
+    SIGINTR. (LP: #118965)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 07 Jun 2007 14:58:27 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 07:47:04 +0200
 
 apport (0.81) gutsy; urgency=low
 
